# ElectrostaticHalftoning

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Controller.cpp  Controller.hpp  eh.cpp  eh.hpp  kernels.cl
src/gui/: ControlPanel.cpp  ControlPanel.hpp  ImageView.cpp  ImageView.hpp  MainWindow.cpp  MainWindow.hpp  ParticlesView.cpp  ParticlesView.hpp  Slider.cpp  Slider.hpp
